# halter

./: .gitignore  .pre-commit-config.yaml  CERTIFICATE.pfx  LICENSE.md  MANIFEST.in  README.md  build_flet_msix.ps1  build_msix.ps1  create_cert.ps1  mkdocs.yml  project.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-on-tag.yml  python-app.yml  tests.yml
docs/: DEVELOPMENT.md  LICENSE.md  ROADMAP.md
scripts/: AppxManifest.xml  Makefile
src/: color_picker.py  constants.py  data_handler.py  main.py  network.py  overview.py  settings.py  utils.py  validation.py
src/cli/: device.py  main.py  network.py  project.py  software.py
src/core/: constants.py
src/core/models/: address.py  device.py  firewall.py  interface.py  network.py  project.py  software.py
src/core/services/: config_io.py  export_network_config.py  export_to_xlnx.py
src/core/services/export/: firewall.py  netmap.py  network_config.py
src/core/validation/: address_validators.py  validation.py
src/gui/: main.py
src/gui_old/: color_picker.py  main.py  network.py  overview.py  settings.py  validation.py
src/halter/cli/: context.py  device.py  main.py  network.py  project.py  software.py
src/halter/core/: utils.py
src/halter/core/models/: address.py  area.py  device.py  interface.py  network.py  project.py
src/halter/core/services/: config_io.py
src/halter/core/services/export/: firewall.py  netmap.py  network_config.py
src/halter/core/validation/: address_validators.py  validation.py
src/halter/gui/: main.py
tests/: test_address_validation.py  test_constants.py  test_data_handler.py  test_network.py  test_network_config.py  test_network_model.py  test_utils.py  test_validation.py
