[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halter"
version = "0.1.1"
description = "Мультиплатформенное приложение для управления сетевыми проектами"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 1 - MVP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "HK", email = "hk@example.com" }]
dependencies = [
  "typer>=0.12",
  "flet>=0.11.0",
  "PyYAML>=6.0.2",
  "openpyxl>=3.1.5",
]
optional-dependencies = { cli = ["typer>=0.16.0"], gui = ["flet>=0.28.2"] }

[project.urls]
Homepage = "https://github.com/herokrat/halter"
Issues = "https://github.com/herokrat/halter/issues"

[project.scripts]
halter-cli = "cli.main:run"


[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# Зависимости для разработки и тестирования
dev-dependencies = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.12.2",
  "pre-commit",
  "poethepoet>=0.36.0",
  "mypy>=1.17.0",
]

[tool.pytest.ini_options]
# Устанавливаем корневой путь для pytest
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff]
line-length = 79
target-version = "py313"
lint.extend-select = ["I", "N", "UP"]
fix = true
extend-exclude = [
  ".vscode",
  ".idea",
  "__pycache__",
  ".python-version",
  ".ruff.toml",
  "ruff.toml",
  "setup.cfg",
  "pyproject.toml",
  ".venv",
  "build",
  ".pytest_cache",
]

[tool.ruff.format]
quote-style = "double"            # или 'single'
indent-style = "space"            # можно 'tab'
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.gui-scripts]
halter-gui = "gui.main:run"

[tool.flet]
# Название организации в формате обратного домена (используется для bundle ID)
org = "com.mycompany"
# Название продукта (отображается в заголовках, иконках и about-окне)
product = "halter"
# Название компании (отображается в about-окне)
company = ""
# Копирайт
copyright = "Copyright (C) 2025 by HK"

[tool.flet.app]
# Путь к исходному коду приложения
path = "src/gui/"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
show_error_codes = true
warn_unused_configs = true
ignore_missing_imports = true
# Treat src as the source root (so src/core → core)
explicit_package_bases = true
package_root = ["src"]

# You can also set source directories if needed
sources = [
  { module = "core", file = "src/core" },
  { module = "cli", file = "src/cli" },
]

# Отключить для __init__.py, если нужно
exclude = [
  "src/gui_old/.*", # если хочешь исключить старый GUI
  "src/gui/.*",
  "^tests/.*$",
]


[tool.poe.tasks.test]
help = "Run the test suite"
cmd = "pytest --cov"

[tool.poe.tasks.check]
help = "Run the test suite"
cmd = "mypy src"
