[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "halter"
version = "0.2.1"
description = "Приложение для управления сетевыми проектами"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
license = { file = "docs/LICENSE.md" }
authors = [{ name = "HK", email = "hermankrivk@gmail.com" }]
dependencies = ["PyYAML>=6.0.2", "openpyxl>=3.1.5"]
optional-dependencies = { cli = ["typer>=0.16.0"], gui = ["flet>=0.28.2"] }

[project.urls]
Homepage = "https://github.com/herokrat/halter"
Issues = "https://github.com/herokrat/halter/issues"

[project.scripts]
halter-cli = "halter.cli.main:run"

[project.gui-scripts]
halter-gui = "halter.gui.main:run"


[tool.uv]
# Указываем, что исходники лежат в src/
dev-dependencies = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.12.2",
  "pre-commit",
  "poethepoet>=0.36.0",
  "mypy>=1.17.0",
  "mkdocs>=1.6.1",
  "types-PyYAML>=6.0.12",
  "types-openpyxl>=3.1.5",
  "flet>=0.28.3",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff]
line-length = 79
target-version = "py313"
lint.extend-select = ["I", "N", "UP"]
fix = true
extend-exclude = [
  ".vscode",
  ".idea",
  "__pycache__",
  ".python-version",
  ".ruff.toml",
  "ruff.toml",
  "setup.cfg",
  "pyproject.toml",
  ".venv",
  "build",
  ".pytest_cache",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
show_error_codes = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["halter/src/gui_old/.*", "halter/src/gui/.*", "^tests/.*$"]

[tool.poe.tasks.test]
help = "Run the test suite"
cmd = "uv run pytest --cov"

[tool.poe.tasks.check]
help = "Run the type checking"
cmd = "uv run mypy src"

[tool.poe.tasks.docs]
help = "Run mkdocs build"
cmd = "uv run mkdocs build"

[tool.poe.tasks.docs-test]
help = "Run mkdocs server to test docs"
cmd = "uv run mkdocs serve"
